[gd_scene load_steps=7 format=3 uid="uid://cjscfstm62ehn"]

[ext_resource type="Script" path="res://Scripts/pc.gd" id="1_exh8y"]
[ext_resource type="Texture2D" uid="uid://mfcl3tjh5mx3" path="res://background/PC.jpg" id="2_xe641"]
[ext_resource type="Texture2D" uid="uid://due0ycww4ijgt" path="res://assets/arrow_up.png" id="3_3nfrt"]
[ext_resource type="Script" path="res://Scripts/pc_ap_dialog.gd" id="4_2b34y"]
[ext_resource type="FontFile" uid="uid://77tm5kpkgub6" path="res://Fonts/comickbook/ComickBook_Simple.ttf" id="5_62kys"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jp382"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_exh8y")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="PC" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(641.394, 361.606)
scale = Vector2(0.63453, 0.478034)
texture = ExtResource("2_xe641")

[node name="Sprite2D" type="Button" parent="ParallaxBackground/ParallaxLayer/PC"]
offset_left = 177.464
offset_top = 751.817
offset_right = 2520.46
offset_bottom = 3584.82
rotation = -3.12941
scale = Vector2(0.0722657, 0.069987)
icon = ExtResource("3_3nfrt")
flat = true
expand_icon = true

[node name="caja_dialogo" type="Node2D" parent="."]
position = Vector2(614, 376)

[node name="Dialogo" type="Sprite2D" parent="caja_dialogo"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(28.5, 194.5)
scale = Vector2(1141, 191)
texture = SubResource("CanvasTexture_jp382")

[node name="Caja_nombre" type="Node2D" parent="."]

[node name="Nombre" type="Sprite2D" parent="Caja_nombre"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(66.025, 389.29)
scale = Vector2(150, 55.299)
texture = SubResource("CanvasTexture_jp382")
offset = Vector2(0.54, 0.94)

[node name="Dialogo_pc" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_2b34y")

[node name="Dialogo" type="Control" parent="Dialogo_pc"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dialogo_pc" type="RichTextLabel" parent="Dialogo_pc/Dialogo"]
layout_mode = 0
offset_left = 92.0
offset_top = 500.0
offset_right = 1166.0
offset_bottom = 646.0
theme_override_fonts/normal_font = ExtResource("5_62kys")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="nombres" type="Control" parent="Dialogo_pc"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="caja_nombre" type="RichTextLabel" parent="Dialogo_pc/nombres"]
layout_mode = 0
offset_left = 81.0
offset_top = 423.0
offset_right = 224.0
offset_bottom = 462.0
theme_override_fonts/normal_font = ExtResource("5_62kys")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
